# ecoseek-client

./: .env.example  .gitignore  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: audit-2026-05-22.md  connect-agenticplug.md  first-task.md  install-wsl.md  migration-inventory.md  migration-plan.md  troubleshooting.md
src/ecoseek_client/: __init__.py  cli.py  config.py  doctor.py  session.py
src/ecoseek_client/aar/: __init__.py
src/ecoseek_client/providers/: __init__.py  agenticplug.py  hermes.py
src/ecoseek_client/skills/: __init__.py
src/ecoseek_client/skills/definitions/: climate.md  connectivity.md  ecoseek-system.md  niche.md  sdm.md
src/ecoseek_client/workflows/: __init__.py
tests/: test_agenticplug_provider.py
