[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoseek-client"
version = "0.1.0"
description = "EcoSeek first-class local client — CLI, providers, AAR loop, and AgenticPlug integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "EcoSeek contributors"}]
keywords = ["ecoseek", "agenticplug", "hpc", "sdm", "ecology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.30",
    "pytest-asyncio>=0.21",
]

[project.scripts]
ecoseek = "ecoseek_client.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
